## Change log

### 1.1.0
* Dev - Support LSX Theme 2.0 new designs
* Dev - Added in a filter to call the Tours Featured image for the Departure Day.
* Dev - Renamed the class-itinerary.php to class-itinerary-query.php

### 1.0.7
* Dev - Added .editorconfig file to help developers to maintain consistent coding styles between different editors and IDEs
* Fix - Removed "read more" from regions excerpt widgets on destination archive page
* Fix - Small fix on TO custom post type (single template - CSS) for small breakpoints
* Dev - LSX Customizer SASS selector extented to new FacetWP selectors
* Dev - Make the team image displays square
* Dev - Enable BS sliders on all small breakpoints
* Dev - New slider code for: Widgets, Regions (destination archive), and Related items section
* Dev - CMB updated (copied from LSX Banners)
* Dev - Changing the archives and widgets to show only the countries
* Dev - Added in a filters for the itinerary image so 3rd party plugins and themes can overwrite it if they want to
* Dev - Added in a filter for the destinations facets, so they only display the countries
* Dev - Add .editorconfig file to help developers to maintain consistent coding styles between different editors and IDEs
* Dev - Add RTL styles option
* Dev - New folder structure for CSS files
* Dev - New folder structure for JS files
* Dev - Update all NPM packages and re-structure Gulp’s tasks
* Dev - Adds the FontAwesome fonts if the theme is not LSX Theme or if it isn’t loaded by another plugin/theme
* Dev - Adding in the LSX sharing support
* Dev - Added in the ability to queue your imports
* Dev - Restructure metabox
* Dev - Adding in support for the TO reviews section
* Dev - Added compatibility (styles) with different column order on single team extension
* Dev - Removed from accommodation archive the brands slider
* Fix - Added in a filter to fix the API tab not showing when certain LSX Extensions are enabled